# rust-template

./: .genignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README-TEMPLATE.md  README.md  README.zh.md  _typos.toml  cargo-generate.toml  cliff.toml  clippy.toml  deny.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml  template-ci.yml
examples/: README.md
fixtures/: README.md
src/: lib.rs  main.rs
tests/: README.md
